@@ -352,6 +352,7 @@ control_handle (pid_t       pid,
 		reply->job_status.goal = job->goal;
 		reply->job_status.state = job->state;
 		reply->job_status.process_state = job->process_state;
+		reply->job_status.pid = job->pid;
 
 		break;
 	}
