@@ -1,5 +1,13 @@
 2006-08-16  Scott James Remnant  <scott@netsplit.com>
 
+	* upstart/control.h (UpstartJobStatusMsg): add a process id.
+	* upstart/control.c (WireJobStatusPayload): and here too.
+	(upstart_send_msg_to): copy the process id onto the wire.
+	(upstart_recv_msg): copy the process id from the wire.
+	* init/control.c (control_handle): Fill in the pid from the job.
+	* upstart/tests/test_control.c (test_messages): Check the pid gets
+	passed across the wire properly.
+
 	* init/control.c (control_cb): Disable the poll for write once the
 	send queue becomes empty.
 
